Replace placeholder keys with real API keys
Updated the secrets in secrets.toml with real keys for deployment.

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,9 +1,9 @@
 # These are FAKE keys for GitHub - Real ones go in Streamlit Cloud
-OPENAI_KEY = "sk-REPLACE-ME-IN-STREAMLIT-CLOUD"
-STRIPE_SECRET = "sk_test_REPLACE-ME"
-STRIPE_PUBLIC = "pk_test_REPLACE-ME"
-STRIPE_PRICE_STARTER = "price_REPLACE-ME"
-STRIPE_PRICE_PRO = "price_REPLACE-ME"
-STRIPE_PRICE_ENTERPRISE = "price_REPLACE-ME"
-SUPABASE_URL = "https://REPLACE-ME.supabase.co"
-SUPABASE_ANON = "REPLACE-ME"
+OPENAI_KEY = "sk-proj-REAL-KEY-HERE"
+STRIPE_SECRET = "sk_test_REAL-KEY-HERE"
+STRIPE_PUBLIC = "pk_test_REAL-KEY-HERE"
+STRIPE_PRICE_STARTER = "price_REAL-ID-HERE"
+STRIPE_PRICE_PRO = "price_REAL-ID-HERE"
+STRIPE_PRICE_ENTERPRISE = "price_REAL-ID-HERE"
+SUPABASE_URL = "https://YOUR-PROJECT.supabase.co"
+SUPABASE_ANON = "eyJ-YOUR-REAL-KEY"
